@@ -12,12 +12,13 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>authorize</module>
         <module>account-info</module>
+        <module>authorize</module>
         <module>longpoll</module>
+        <module>tutorial</module>
+        <module>upgrade-oauth1-token</module>
         <module>upload-file</module>
         <module>web-file-browser</module>
-        <module>upgrade-oauth1-token</module>
     </modules>
 
     <dependencies>
@@ -38,9 +39,6 @@
     </repositories>
 
     <build>
-        <sourceDirectory>src</sourceDirectory>
-        <testSourceDirectory>test</testSourceDirectory>
-
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -63,8 +61,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
+                        <source>8</source>
+                        <target>8</target>
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
