@@ -1,0 +1,6 @@
+# Tutorial Example
+
+This repo contains the example from our [online tutorial](https://www.dropbox.com/developers/documentation/java#tutorial).
+
+To run this example, please replace `"<ACCESS TOKEN>"` in `Main.java` with your access token. See the online tutorial for more details on how to generate an access token.
+
