@@ -1,3 +1,4 @@
+- Add example from online tutorial.
 
 ---------------------------------------------
 2.0.0 (2016-03-03)
